--- a/styles/index.css
+++ b/styles/index.css
@@ -29,7 +29,7 @@ h2 {
     background-color: rgb(33, 38, 44);
 }
 
-h3 {
+h3, h4 {
     font-size: 1.1rem;
     font-weight: 500;
     overflow-y: hidden;
@@ -41,7 +41,7 @@ section {
     align-items: start;
     justify-content: center;
     gap: 1.5rem;
-    width: 25rem;
+    width: 32rem;
     padding: 1.5rem 2rem 2rem 2rem;
     border-radius: 10px;
     color: #fff;
